# Animal-Management-System

./: README.md
scripts/: table.sql
web-server/test-web/: datas.html  login.html
web-server/test-web/css/: data.css  login.css
web-server/test-web/images/: showpassword.psd
web-server/webservice/: .env  Cargo.toml
web-server/webservice/src/: db_access.rs  handlers.rs  models.rs  parse.rs  routers.rs  state.rs
